--- a/Cart.html
+++ b/Cart.html
@@ -11,6 +11,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <!-- cart css filed is connected -->
   <link rel="stylesheet" href="/cart.css">
     <style>
         
@@ -21,6 +22,7 @@
 </head>
 
 <body >
+    <!-- the header code from home pages which is common in all pages-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
       <div class=" navbar-logo me-auto" ><b>Eccomerce</b></div>
@@ -62,7 +64,9 @@
        
     </div>
     </div>
-  </nav><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  </nav>
+    <!-- this script-link is copied from bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <div class="container " style="margin-top: 120px;">
