--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/header.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
+      /* making home button some what bold to show some difference from other adjacent button */
      .home{ font-style: bold; scale: 1.1; font-family: Verdana}
      
     </style>
 </head>
 <body>
+  <!-- creating header -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
       <div class=" navbar-logo me-auto" ><b>Eccomerce</b></div>
@@ -75,6 +78,7 @@
   <button class="product-cat">Electronics</button>
 </div>
 <div class="product-container " style="margin-top: 0%;">
+  <!-- creating cards to show products -->
 <div class="card" >
     <img src="/images/1.jpg" class="card-img-top" alt="..."  >
     <div class="card-body">
